Bug 1520957 - [release 119] Implement spacing for event listener breakpoints (#7736). r=dwalsh
UltraBlame original commit: d3c9d833d45a8ad506100245f401567899fdf302

--- a/devtools/client/debugger/new/src/components/SecondaryPanes/EventListeners.css
+++ b/devtools/client/debugger/new/src/components/SecondaryPanes/EventListeners.css
@@ -63,12 +63,33 @@ event
 -
 listeners
 -
-pane
+content
+{
+padding
+:
+4px
+20px
+;
+}
+.
+event
+-
+listeners
+-
+content
 ul
 {
 padding
 :
 0
+;
+list
+-
+style
+-
+type
+:
+none
 ;
 }
 .
@@ -88,23 +109,9 @@ none
 .
 event
 -
-listener
--
-category
-{
-font
--
-weight
-:
-bold
-;
-}
-.
-event
--
 listeners
 -
-pane
+content
 .
 arrow
 {
@@ -112,12 +119,14 @@ margin
 -
 inline
 -
-start
+end
 :
-4px
+0
 ;
-margin
--
+position
+:
+relative
+;
 top
 :
 1px
@@ -136,7 +145,7 @@ event
 -
 listeners
 -
-pane
+content
 .
 arrow
 .
@@ -163,7 +172,7 @@ event
 -
 listeners
 -
-pane
+content
 .
 arrow
 .
@@ -194,6 +203,14 @@ items
 :
 center
 ;
+margin
+-
+inline
+-
+start
+:
+30px
+;
 }
 .
 event
@@ -209,7 +226,7 @@ inline
 -
 end
 :
-6px
+4px
 ;
 margin
 -
@@ -217,6 +234,6 @@ inline
 -
 start
 :
-40px
+0px
 ;
 }
